<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:tag="mon"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/main_heading"
        android:textColor="@color/black"
        android:textSize="50sp"
        app:layout_constraintHorizontal_bias="0.456"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="353dp"
        android:layout_height="368dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <Button
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onDayClick"
            android:text="@string/monday"
            android:textColor="#131313"
            android:textSize="35sp"
            app:backgroundTint="#FFFF00" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onDayClick"
            android:tag="tue"
            android:text="@string/tuesday"
            android:textColor="@color/black"
            android:textSize="35sp"
            app:backgroundTint="#FFC0CB" />

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onDayClick"
            android:tag="wed"
            android:text="@string/wednesday"
            android:textColor="@color/black"
            android:textSize="35sp"
            app:backgroundTint="#008000" />

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onDayClick"
            android:tag="thurs"
            android:text="@string/thursday"
            android:textColor="@color/black"
            android:textSize="35sp"
            app:backgroundTint="#FFA500" />

        <Button
            android:id="@+id/button5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onDayClick"
            android:tag="fri"
            android:text="@string/friday"
            android:textColor="@color/black"
            android:textSize="35sp"
            app:backgroundTint="#0000FF" />

        <Button
            android:id="@+id/button6"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onDayClick"
            android:tag="sat"
            android:text="@string/saturday"
            android:textColor="@color/black"
            android:textSize="35sp"
            app:backgroundTint="#800080" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>